# conneroh.com

./: .air.toml  .conclaude.yaml  .config.json  .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .gitmodules  .golangci.json  .infisical.json  .opencode.json  .pre-commit-config.yaml  :q  AGENTS.md  CLAUDE.md  Dockerfile  FEATURE-DESIGN-SEARCH.md  FEATURE-DESIGN.md  HEAD  ORIG_HEAD  README.md  SEARCH.md  bun.nix  check.sh  config.json  config.yaml  cpu.pprof  cpu_profile_startup.prof  dependency-graph.json  dev.go  docker-compose-readme.md  docker-compose.yml  docs.alpine.md  docs.templ.md  fix.sh  fix_lint.sh  fix_update.sh  flake-scripts.nix  flake.nix  (+36 more)
.claude/: CLAUDE.md  mcp  settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md  renovate.json5
.obsidian/: workspace.json
backlog/: config.yml
cmd/: main.go
cms/: .gitignore  Dockerfile  Makefile  flake.nix  fly.toml  package.json  tsconfig.json
doc/: doc.go  main.go
examples/: main.go  people.go
live/: Cargo.toml
live/src/: main.rs
live/src/database/: mod.rs
live/src/models/: mod.rs  paths.rs
live/src/processor/: markdown.rs  mod.rs  s3.rs
live/tests/: test_post.md  test_project.md  test_tag.md
logs/: HEAD
nix/: flake-module.nix
openspec/: project.md
test-results/: .last-run.json
tests/: README.md  setup.ts
(+1853 files in other folders)
