[package]
name = "live"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "live"
path = "src/main.rs"

[dependencies]
aws-config = "1.6.2"
aws-credential-types = "1.2.3"
aws-sdk-s3 = "1.85.0"
ollama-rs = "0.3.1"
tokio = {version = "1.35.0", features = ["full"]}
rusqlite = { version = "0.29.0", features = ["bundled"] }
walkdir = "2.4.0"
md5 = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
mime_guess = "2.0"
bytes = "1.5"
